--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,12 @@
   border: solid black;
   border-width: 1px;
   background-color: orange;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   box-sizing: border-box;
+  text-align: center;
+  display: block;
+  margin-top: 20px;
+  margin: auto;
 }
 
 .box2 {
@@ -15,6 +19,10 @@
   margin-bottom: 10px;
   padding: 20px;
   box-sizing: border-box;
+  text-align: center;
+  display: block;
+  margin-top: 20px;
+  margin: auto;
 }
 
 .box3 {
@@ -23,7 +31,21 @@
   border: solid black;
   border-width: 30px;
   background-color: orange;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   box-sizing: border-box;
+  text-align: center;
+  display: block;
+  margin-top: 20px;
+  margin: auto;
 }
+
+img {
+  width: 300px;
+}
+
+.centered-image {
+  margin: auto;
+  width: 50%;
+  height: auto;
+  display: block;
 }
